--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -81,3 +81,7 @@ input[type="text"] {
     border: 1px solid #F9F9F9;
     cursor: url('#{resource["images/gun.cur"]}'), crosshair;
 }
+
+#areaForm, #errorForm {
+    display: none;
+}
