Migrate to pure Hibernate

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -63,9 +63,8 @@ input[type="text"] {
     position: relative;
 }
 
-.historyTable > thead {
-    position: sticky;
-    top: 0;
+.historyTable > thead > tr > th {
+    text-transform: uppercase;
 }
 
 .historyTable > tbody > tr > td {
