--- a/src/main/webapp/templates/head.xhtml
+++ b/src/main/webapp/templates/head.xhtml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <h:head xmlns:h="http://xmlns.jcp.org/jsf/html" class="topmenu">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF8" />
+
     <!--@elvariable id="pageTitle" type="java.lang.String"-->
     <title><h:outputText value="#{empty pageTitle ? '' : pageTitle.concat(' — ')}" />лапка MATPOCKuHа</title>
 
-    <h:outputStylesheet library="css" name="style.css" />
+    <h:outputStylesheet library="css" name="style.css"  />
 </h:head>
