--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -81,6 +81,6 @@ input[type="text"] {
     cursor: url('#{resource["images/gun.cur"]}'), crosshair;
 }
 
-#areaForm, #errorForm {
+#areaForm {
     display: none;
 }
