Add information block. Fix styles and small bugs

--- a/frontend/src/pages/AreaPage/AreaPage.css
+++ b/frontend/src/pages/AreaPage/AreaPage.css
@@ -13,7 +13,9 @@
 }
 
 .area-form-container {
-    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 30px;
 }
 
