--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -1,19 +1,25 @@
 
 .container {
+    display: flex;
     margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
-    padding-right: 15px
+    padding-right: 15px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
 }
 
 @media (min-width: 699px) {
     .container {
-        width: 680px
+        width: 680px;
     }
 }
 
 @media (min-width: 1147px) {
     .container {
-        width: 1100px
+        width: 1100px;
+        min-height: 400px;
     }
 }
